--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   http: ^1.4.0
   provider: ^6.1.5
   geojson_vi: ^2.2.5
+  supabase_flutter: ^2.9.1
 
 dev_dependencies:
   flutter_test:
