--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   provider: ^6.1.5
   geojson_vi: ^2.2.5
   supabase_flutter: ^2.9.1
+  maps_toolkit: ^3.1.0
 
 dev_dependencies:
   flutter_test:
